@@ -12,6 +12,8 @@ requires('gui')
 
 class PackTest(AbstractWidgetTest, unittest.TestCase):
 
+    test_keys = None
+
     def create2(self):
         pack = tkinter.Toplevel(self.root, name='pack')
         pack.wm_geometry('300x200+0+0')
@@ -276,6 +278,8 @@ class PackTest(AbstractWidgetTest, unittest.TestCase):
 
 class PlaceTest(AbstractWidgetTest, unittest.TestCase):
 
+    test_keys = None
+
     def create2(self):
         t = tkinter.Toplevel(self.root, width=300, height=200, bd=0)
         t.wm_geometry('300x200+0+0')
@@ -477,6 +481,8 @@ class PlaceTest(AbstractWidgetTest, unittest.TestCase):
 
 
 class GridTest(AbstractWidgetTest, unittest.TestCase):
+
+    test_keys = None
 
     def tearDown(self):
         cols, rows = self.root.grid_size()
